# agilefs

./: CMakeLists.txt  ProjectHome.md  README  cscope.files  cscope.in.out  cscope.out  cscope.po.out  update_cscope.sh
AgileFS/: CMakeLists.txt
AgileFS/include/: agilefs-def.h
AgileFS/src/: CMakeLists.txt
AgileFS/src/client/: CMakeLists.txt  fuse_io_util.c
AgileFS/src/server/: CMakeLists.txt  agilefs-server.c  chunks.c  chunks.h  expat-xml.c
doc/: master.docx
include/: agilefs-def.h  agilefs.h
src/: CMakeLists.txt  README
src/client/: CMakeLists.txt  agilefs-fuse.c  fuse_io_util.h  fuse_type.h
src/common/: CMakeLists.txt
src/io/: CMakeLists.txt  buffer-queue.h  thread-mgr.c  thread-mgr.h
src/io/net/: agilefs-tcp.c  socket-collection.c  socket-collection.h  sockio.c  sockio.h  tcp-addressing.h  tcp.c  tcp.h  test_main.c
src/io/storage/: direct-ios.c  direct-ios.h  space-immu.c  space-immu.h
src/server/: CMakeLists.txt  agilefs-server.c  chunks-io.c  chunks-io.h  chunks.c  chunks.h  db_ops.c  db_ops.h  expat-xml.c  expat-xml.h  global.xml  libxml-parser.c  queue.c  xmlparser.h
trunk/: CMakeLists.txt  cscope.files  cscope.in.out  cscope.out  cscope.po.out
trunk/doc/: master.docx
trunk/include/: agilefs-def.h  agilefs-errno.h
trunk/src/: CMakeLists.txt
trunk/src/client/: CMakeLists.txt  agilefs-fuse.c  (+2 more)
trunk/src/io/net/: CMakeLists.txt  socket-collection.c  socket-collection.h  sockio.c  sockio.h  tcp-addressing.h  tcp.c  tcp.h  test_client.c  test_main.c
trunk/src/server/: CMakeLists.txt  agilefs-server.c  chunks-io.c  chunks-io.h  chunks.c  chunks.h  db_ops.c  db_ops.h  expat-xml.c  expat-xml.h  queue.c
(+19 files in other folders)
